# flora

./: README.md  pyproject.toml
src/flora/: __init__.py  chat_bot.py  ex.py  exercises.md  password.py  vectorize.py
