[project]
name = "flora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy Miles", email = "akmiles@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
]

[project.scripts]
flora = "flora:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
